hphp/test/slow/object_property/714.php.expectf
HipHop Fatal error: Cannot access property started with '\\0' in %s/hphp/test/slow/object_property/714.php on line 3
